# as-moses

./: CMakeLists.txt  README.md
moses/atomese/: CMakeLists.txt
moses/moses/main/: populate_atomspace.cc  populate_atomspace.h
opencog/atomese/: CMakeLists.txt
opencog/atomese/atom_types/: CMakeLists.txt  NewLink.cc  NewLink.h  atom_types.script
tests/atomese/atom_types/: CMakeLists.txt  NewLinkUTest.cxxtest  newlink.scm
tests/moses/: AtomeseComplexityUTest.cxxtest
tests/moses/main/: populateAtomSpaceUTest.cxxtest
