ADD_CXXTEST(ImpulseLinkUTest)
TARGET_LINK_LIBRARIES(ImpulseLinkUTest
	execution
	smob
	${ATOMSPACE_LIBRARIES}
	${COGUTIL_LIBRARY}
	atomese
	asmoses_types
	)

ADD_CXXTEST(NewLinkUTest)
TARGET_LINK_LIBRARIES(NewLinkUTest
	execution
	smob
	${ATOMSPACE_LIBRARIES}
	${COGUTIL_LIBRARY}
	atomese
	asmoses_types
	)
